// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-accordion should render with collapse elements 1`] = `
<modus-wc-accordion custom-class="test-class">
  <!---->
  <div class="test-class">
    <modus-wc-collapse collapse-id="123" options="{options[0]}">
      <!---->
      <modus-wc-collapse collapse-id="123" hidden="" options="{options[1]}">
        <!---->
        <modus-wc-collapse collapse-id="123" hidden="" options="{options[2]}">
          <!---->
          <div class="modus-wc-border modus-wc-collapse modus-wc-collapse-arrow modus-wc-collapse-close">
            <input aria-controls="123-content" aria-labelledby="123-title" class="modus-wc-min-h-4" id="123-checkbox" type="checkbox">
            <div aria-labelledby="123-title" class="modus-wc-collapse-content modus-wc-cursor-default" id="123-content"></div>
          </div>
        </modus-wc-collapse>
        <div class="modus-wc-border modus-wc-collapse modus-wc-collapse-arrow modus-wc-collapse-close">
          <input aria-controls="123-content" aria-labelledby="123-title" class="modus-wc-min-h-4" id="123-checkbox" type="checkbox">
          <div aria-labelledby="123-title" class="modus-wc-collapse-content modus-wc-cursor-default" id="123-content"></div>
        </div>
      </modus-wc-collapse>
      <div class="modus-wc-border modus-wc-collapse modus-wc-collapse-arrow modus-wc-collapse-close">
        <input aria-controls="123-content" aria-labelledby="123-title" class="modus-wc-min-h-4" id="123-checkbox" type="checkbox">
        <div aria-labelledby="123-title" class="modus-wc-collapse-content modus-wc-cursor-default" id="123-content"></div>
      </div>
    </modus-wc-collapse>
  </div>
</modus-wc-accordion>
`;

exports[`modus-wc-accordion should render with custom props 1`] = `
<modus-wc-accordion custom-class="test-class">
  <!---->
  <div class="test-class"></div>
</modus-wc-accordion>
`;

exports[`modus-wc-accordion should render with default props 1`] = `
<modus-wc-accordion>
  <!---->
  <div></div>
</modus-wc-accordion>
`;
